# multibrowser

./: .gitignore  Makefile  README.md  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  vite.config.ts
internal/browser/: browser.go
internal/chrome/: launcher.go  launcher_test.go
internal/cli/: cli.go
internal/layout/: layout.go  layout_test.go
internal/runner/: runner.go  runner_test.go
internal/screen/: macos.go  macos_test.go
internal/session/: session.go
internal/ui/: model.go
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
