[package]
name = "multibrowser-desktop"
version = "0.1.0"
description = "Desktop multi-session Chrome launcher built with Tauri"
authors = ["Ernesto"]
edition = "2021"

[lib]
name = "multibrowser_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging"
] }
